@@ -1,34 +1,0 @@
-name: test
-
-on:
-  push:
-    branches:
-      - '*'
-    tags-ignore:
-      - '*'
-  pull_request:
-
-jobs:
-  raku:
-    strategy:
-      matrix:
-        os:
-          - ubuntu-latest
-          - macOS-latest
-          # - windows-latest
-        raku-version:
-          - 'latest'
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v2
-      - uses: Raku/setup-raku@v1
-        with:
-          raku-version: ${{ matrix.raku-version }}
-      - name: Update Zef Indices
-        run: zef update
-      - name: Install Dependencies
-        run: zef install --/test --test-depends --deps-only .
-      - name: Install App::Prove6
-        run: zef install --/test App::Prove6
-      - name: Run Tests
-        run: prove6 -l -v t
